# rareBit-Flags-Receivers

./: README.md
Flag_PRO/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  overlay-bt.conf  prj.conf
Flag_PRO/BMD-345_EVK/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  pm.config
Flag_PRO/BMD-345_EVK/mcuboot/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  child_image_preload.cmake  cmake_install.cmake  compile_commands.json  shared_vars.cmake
Flag_PRO/BMD-345_EVK/zephyr/: .cmake.dotconfig.checksum  .config  app_moved_test_update.hex  app_signed.hex  app_test_update.hex  cmake_install.cmake  dev_handles.c  dfu_application.zip_manifest.json  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd.dep  mcuboot_primary.hex  mcuboot_primary_app.hex  merged.hex  runners.yaml  zephyr.dts  zephyr.dts.pre  zephyr.hex  zephyr.stat  zephyr_final.map  zephyr_pre0.map  zephyr_pre1.map
Flag_PRO/Flag_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
Flag_PRO/Flag_build/Kconfig/: Kconfig.shield  Kconfig.shield.defconfig
Flag_PRO/Flag_build/mcuboot/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  child_image_preload.cmake  cmake_install.cmake  compile_commands.json  (+1 more)
Flag_PRO/build_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  partitions.yml
Flag_PRO/src/: battery.c  main.c  pulse_rgb.c
(+1451 files in other folders)
